# BigWhiteTool

./: .gitignore  CMakeLists.txt  README.md  m.bat
DumperSDK/: CMakeLists.txt  Mem.cpp  Mem.h  dumper.cpp  dumper.h  engine.cpp  engine.h  file.h  generic.cpp  generic.h  m.bat  main.cpp
include/Android_Read/: Android_Read.h  BigWhiteRead.h  GetData.h  biu.h
include/Android_draw/: DrawPlayer.h  Enum.h  ItemData.h  Menu.h  Tool.h
include/Android_dump/: base.h  dumper.h  generic.h
include/request/: Login.h
include/tools/: main.h
outputs/arm64-v8a/: BigWhiteTool.ssp
outputs/arm64-v8a/protected/: BigWhiteTool
src/: BigWhiteTool.cpp
src/Android_Read/: Android_Read.cpp  BigWhiteRead.cpp
src/Android_draw/: draw.cpp
src/Android_dump/: dumper.cpp  engine.cpp  file.cpp  generic.cpp
src/native_surface/: extern_function.cpp
